frontend/test/should_fail/computations_no_procmethod2.grg
using computations_no_procmethod;

test bar()
{
	n:NO;
	
	optional {
	---
		yield {
			(yield x) = n.no();
		}
	}
---
	def var x:int;
}
